test/files/neg/t409.check
t409.scala:6: error: traits or objects may not have parameters
class Toto extends Expr with Case1(12);
                                  ^
one error found
